manifests/media/sabnzbd/spec-patch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: srv
spec:
  template:
    metadata:
      annotations:
        vk.podman.io/volume-selinux.incomplete: relabel-private
    spec:
      containers:
      - name: srv

        image: linuxserver/sabnzbd
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP

        resources:
          requests:
            memory: 700Mi
            cpu: 50m
          limits:
            memory: 1000Mi
            cpu: 2000m

        volumeMounts:
        - name: config
          mountPath: /config
        - name: incomplete
          mountPath: /incomplete-downloads
        - name: tv
          mountPath: /downloads/tv
        - name: movies
          mountPath: /downloads/movies

      volumes:
      - name: config
        hostPath:
          path: /tank/data/sabnzbd
          type: Directory
      - name: incomplete
        hostPath:
          path: /tank/media/partial
          type: Directory
      - name: tv
        hostPath:
          path: /tank/media/tv/downloads
          type: Directory
      - name: movies
        hostPath:
          path: /tank/media/movies/downloads
          type: Directory
