manifests/media/sabnzbd/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sabnzbd
spec:
  serviceName: sabnzbd
  volumeClaimTemplates: []
  replicas: 1
  updateStrategy:
    type: RollingUpdate

  template:
    metadata:
      annotations:
        vk.podman.io/systemd.sabnzbd: 'false'
        vk.podman.io/volume-selinux.config: relabel-private
    spec:

      nodeSelector:
        kubernetes.io/role: pet
        kubernetes.io/hostname: pet-ausbox

      tolerations:
      - key: kubernetes.io/pet-node
        operator: Exists
        effect: NoSchedule

      containers:

      - name: sabnzbd
        image: linuxserver/sabnzbd

        ports:
        - containerPort: 8080
          name: http
          protocol: TCP

        volumeMounts:
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /downloads/tv
        - name: movies
          mountPath: /downloads/movies

      volumes:
      - name: config
        hostPath:
          path: /tank/data/sabnzbd
          type: Directory
      - name: tv
        hostPath:
          path: /tank/media/tv/downloads
          type: Directory
      - name: movies
        hostPath:
          path: /tank/media/movies/downloads
          type: Directory
