manifests/media/sabnzbd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
spec:
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: http
